--- a/index.html
+++ b/index.html
@@ -743,137 +743,61 @@
     <div style="background-color: #141819; width: 100%; height: 40px;"> </div>
 
     <!-- Things To Do -->
-    <section>
-      <div style="padding-bottom: 10px; padding-top: 50px; background-image: url(./img/vt2.jpg);width: 100%;" id="TTD">
-        <h1 align="center" style="font-family: 'Sriracha', cursive; font-size: 5em; padding-bottom: 20px;"> Things To Do </h1>
-        <div class="container card1 mt-2 ">
-          <p class="accordion-header" id="headingOne" data-bs-toggle="collapse"
-          data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-            <span class="collapsed hover-underline-animation01" type="button" >
-              <button class="cta11">
-                <span class="hover-underline-animation11"> SET DESTINATION </span>
-                <svg viewBox="0 0 46 16" height="10" width="30" xmlns="http://www.w3.org/2000/svg" id="arrow-horizontal">
-                  <path transform="translate(30)" class="changecolor"
-                    d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z" data-name="Path 10"
-                    id="Path_10"></path>
-                </svg>
-              </button>
-            </span>
-          </p>
-          <p class="accordion-header" id="flush-headingTwo" data-bs-toggle="collapse"
-          data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-            <span class="collapsed hover-underline-animation01" type="button" >
-              <button class="cta11">
-                <span class="hover-underline-animation11"> FIT AND HEALTHY </span>
-                <svg viewBox="0 0 46 16" height="10" width="30" xmlns="http://www.w3.org/2000/svg" id="arrow-horizontal">
-                  <path transform="translate(30)" class="changecolor"
-                    d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z" data-name="Path 10"
-                    id="Path_10"></path>
-                </svg>
-              </button>
-            </span>
-          </p>
-          <p class="accordion-header" id="flush-headingThree" data-bs-toggle="collapse"
-          data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-            <span class="collapsed hover-underline-animation01" type="button" >
-              <button class="cta11">
-                <span class="hover-underline-animation11"> NECESSARY ITEMS </span>
-                <svg viewBox="0 0 46 16" height="10" width="30" xmlns="http://www.w3.org/2000/svg" id="arrow-horizontal">
-                  <path transform="translate(30)" class="changecolor"
-                    d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z" data-name="Path 10"
-                    id="Path_10"></path>
-                </svg>
-              </button>
-            </span>
-          </p>
-        </div>
-        <div class="container mb-5">
-          <div class="accordion accordion-flush" id="accordionFlushExample">
-            <div class="accordion-item ttd">
-              <div id="flush-collapseOne" class="accordion-collapse collapse ttd" aria-labelledby="flush-headingOne"
-                data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">
-                  <table class="table">
-                    <thead>
-                      <tr>
-                        <th scope="col" class="border-0 pb-4">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#A6D6E3"
-                            class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
-                            <path
-                              d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
-                          </svg>
-                        </th>
-                        <th scope="col " class="txt border-0">
-                          Before traveling, do a little research on the places you will be visiting. Find out what kind of
-                          weather to expect. Is it damp? Is it hot? How about the height? Do some research about where you
-                          are going to live. You can check out vacation travel reviews and guides for the best travel tips
-                          in the area on our website.
-                        </th>
-                      </tr>
-                    </thead>
-                  </table>
+    <div style="padding-bottom: 50px; padding-top: 50px;">
+        <h1 align="center" class="text-dark m-5" style="font-family: 'Sriracha', cursive; font-size: 5em;"> How to make this website?
+        </h1>
+        <div class="container">
+          <div class="row row-cols-1 row-cols-md-2 g-4 ">
+            <div class="col">
+              <div class="card border border-0">
+                <div class="card-body">
+                  <h5 class="card-title text-center mt-5" style="font-family: 'Sriracha', cursive; font-size: 3em;">Look at My Channel</h5>
+                  <p class="card-text text-center" style="font-family: 'Sriracha', cursive; font-size: 2em;">wait for the video on making this website to be live on my channel soon</p>
                 </div>
               </div>
             </div>
-            <div class="accordion-item ttd">
-              <div id="flush-collapseTwo" class="accordion-collapse collapse ttd" aria-labelledby="flush-headingTwo"
-                data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">
-                  <table class="table">
-                    <thead>
-                      <tr>
-                        <th scope="col" class="border-0">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#A6D6E3"
-                            class="bi bi-bandaid" viewBox="0 0 16 16">
-                            <path
-                              d="M14.121 1.879a3 3 0 0 0-4.242 0L8.733 3.026l4.261 4.26 1.127-1.165a3 3 0 0 0 0-4.242ZM12.293 8 8.027 3.734 3.738 8.031 8 12.293 12.293 8Zm-5.006 4.994L3.03 8.737 1.879 9.88a3 3 0 0 0 4.241 4.24l.006-.006 1.16-1.121ZM2.679 7.676l6.492-6.504a4 4 0 0 1 5.66 5.653l-1.477 1.529-5.006 5.006-1.523 1.472a4 4 0 0 1-5.653-5.66l.001-.002 1.505-1.492.001-.002Z" />
-                            <path
-                              d="M5.56 7.646a.5.5 0 1 1-.706.708.5.5 0 0 1 .707-.708Zm1.415-1.414a.5.5 0 1 1-.707.707.5.5 0 0 1 .707-.707ZM8.39 4.818a.5.5 0 1 1-.708.707.5.5 0 0 1 .707-.707Zm0 5.657a.5.5 0 1 1-.708.707.5.5 0 0 1 .707-.707ZM9.803 9.06a.5.5 0 1 1-.707.708.5.5 0 0 1 .707-.707Zm1.414-1.414a.5.5 0 1 1-.706.708.5.5 0 0 1 .707-.708ZM6.975 9.06a.5.5 0 1 1-.707.708.5.5 0 0 1 .707-.707ZM8.39 7.646a.5.5 0 1 1-.708.708.5.5 0 0 1 .707-.708Zm1.413-1.414a.5.5 0 1 1-.707.707.5.5 0 0 1 .707-.707Z" />
-                          </svg>
-                        </th>
-                        <th scope="col " class="txt border-0">
-                          The important thing is to remember to prepare yourself in advance to keep your health in shape
-                          so you can relax and enjoy your trip no matter what. With our tips for preparing for a trip
-                          abroad, all you have to do is pack your travel essentials, make a reservation, and get ready for
-                          the best travel experience.
-                        </th>
-                      </tr>
-                    </thead>
-                  </table>
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item ttd">
-              <div id="flush-collapseThree" class="accordion-collapse collapse ttd" aria-labelledby="flush-headingThree"
-                data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">
-                  <table class="table">
-                    <thead>
-                      <tr>
-                        <th scope="col" class="border-0 pb-4">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#A6D6E3"
-                            class="bi bi-bag-check-fill" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd"
-                              d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0zm-.646 5.354a.5.5 0 0 0-.708-.708L7.5 10.793 6.354 9.646a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0l3-3z" />
-                          </svg>
-                        </th>
-                        <th scope="col " class="txt border-0">
-                          Yes, this is technically legal advice, but being prepared will help you avoid unwanted
-                          situations while traveling. Stranded in a new city with no money and no identity is every
-                          traveler's worst nightmare. Make sure you bring your important documents, including your
-                          passport, driver's license, social security card, credit card, insurance card, and an extra set
-                          of clothes. Travelers' checks are also good to have in case your card is lost or stolen.
-                        </th>
-                      </tr>
-                    </thead>
-                  </table>
-                </div>
+            <div class="col">
+              <div class="card border border-0 justify-content-center">
+                <iframe width="560" height="315" src="https://www.youtube.com/channel/UC2feNc-uCR3VhPvt33HxHew" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
               </div>
             </div>
           </div>
         </div>
+
+        <h1 align="center" class="text-dark m-5" style="font-family: 'Sriracha', cursive; font-size: 5em;"> OR
+        </h1>
+        <div class="container">
+          <div class="row row-cols-1 row-cols-md-2 g-4 ">
+            <div class="col">
+              <div class="card border border-0 justify-content-center">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/_KgCFwWTORI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card border border-0">
+                <div class="card-body">
+                  <h5 class="card-title text-center mt-5" style="font-family: 'Sriracha', cursive; font-size: 3em;">You can Follow this Playlist</h5>
+                  <p class="card-text text-center" style="font-family: 'Sriracha', cursive; font-size: 2em;">This playlist contains how to do a CRUD firebase database on a website</p>
+                </div>
+              </div>
+            </div>
+            
+            <!-- <div class="col">
+              <div class="card border border-0 justify-content-center">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/_KgCFwWTORI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card border border-0">
+                <div class="card-body">
+                  <h5 class="card-title">You can Follow this Playlist</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div> -->
+          </div>
+        </div>
       </div>
-    </section>
     <!-- end Things To Do -->
 
     <!-- FOOTER -->
